2008-06-05  Alexey Proskuryakov  <ap@webkit.org>

        Re-landing an independent part of a previously rolled out threading patch.

        * wtf/ThreadSpecific.h: Make sure to initialize POD thread-specific varaibles, too
        (replaced "new T" with "new T()").

2008-06-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Hyatt.
        
        - force inlining of a template function that only has one call site per specialization
        1.3% speedup on SunSpider

        * kjs/collector.cpp:
        (KJS::Collector::heapAllocate): This template function is only
        called from allocate() and allocateNumber() (once per
        specialization) and the extra call overhead for GC allocation
        shows up, so force inlining.

2008-06-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Alexey and Oliver.
        
        - remove profiler fetch hack
        I measure an 0.5% progression from this, others show a wash. It seems not needed any more.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):

2008-06-05  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej.

        Bug 19400: subscript operator does not protect base when necessary
        <https://bugs.webkit.org/show_bug.cgi?id=19400>

        Use a temporary for the base in BracketAccessorNode if the subscript
        might possibly modify it.

        * kjs/grammar.y:
        * kjs/nodes.cpp:
        (KJS::BracketAccessorNode::emitCode):
        * kjs/nodes.h:
        (KJS::BracketAccessorNode::):

2008-06-04  Sam Weinig  <sam@webkit.org>

        Reviewed by Maciej Stachowiak.

        Big cleanup of formatting and whitespace.

2008-06-04  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Oliver.

        Add an option to dump statistics on executed instructions.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.cpp:
        (KJS::):
        (KJS::OpcodeStats::~OpcodeStats):